--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,5 +1,8 @@
 version: 2
 updates:
+- package-ecosystem: github-actions
+  schedule:
+    interval: monthly
 - package-ecosystem: npm
   directory: "/report"
   labels:
