--- a/report/package.json
+++ b/report/package.json
@@ -8,7 +8,7 @@
     "preview": "astro preview"
   },
   "devDependencies": {
-    "@astrojs/svelte": "^0.1.5",
+    "@astrojs/svelte": "0.1.3",
     "@octokit/rest": "^18.12.0",
     "astro": "^0.26.1"
   },
