--- a/.github/workflows/node.js-script.yml
+++ b/.github/workflows/node.js-script.yml
@@ -1,9 +1,9 @@
-name: JavaScript CI
+name: "Node.js CI - Script"
 
 on:
   push:
     paths:
-      - ".github/workflows/javascript-ci.yml"
+      - ".github/workflows/node.js-script.yml"
       - "script/**"
   pull_request:
     paths:
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [16.x]
+        node-version: [16.x, 18.x]
     steps:
     - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
