--- a/.github/workflows/node.js-script.yml
+++ b/.github/workflows/node.js-script.yml
@@ -10,7 +10,7 @@ on:
       - "script/**"
 
 jobs:
-  build:
+  build-script:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -26,7 +26,7 @@ jobs:
     - run: npm run build
       working-directory: script
 
-  lint:
+  lint-script:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
