--- a/.github/workflows/belgium-flanders.yml
+++ b/.github/workflows/belgium-flanders.yml
@@ -49,8 +49,8 @@ jobs:
           country: europe/belgium
       - name: Download & Unzip Wegenregister data
         run: |
-          wget "https://downloadagiv.blob.core.windows.net/wegenregister/Wegenregister_SHAPE_20220616+-+correctie.zip"
-          unzip -j "Wegenregister_SHAPE_20220616+-+correctie.zip" "Wegenregister_SHAPE_20220616 - correctie/Shapefile/Wegsegment.*"
+          wget "https://downloadagiv.blob.core.windows.net/wegenregister/Wegenregister_SHAPE_20220915.zip"
+          unzip -j "Wegenregister_SHAPE_20220915.zip" "Wegenregister_SHAPE_20220915/Shapefile/Wegsegment.*"
       - name: Convert (and filter) Wegenregister to GeoJSON
         run: |
           ogr2ogr -f "GeoJSON" -progress \
