--- a/.github/workflows/netherlands.yml
+++ b/.github/workflows/netherlands.yml
@@ -19,6 +19,11 @@ on:
       - "data/netherlands/convert.json"
       - "data/netherlands/filter.sql"
 
+# Allow one concurrent deployment
+concurrency:
+  group: "netherlands"
+  cancel-in-progress: true
+
 jobs:
 
   diff-flanders:
