--- a/.github/workflows/luxembourg.yml
+++ b/.github/workflows/luxembourg.yml
@@ -21,7 +21,7 @@ on:
 
 # Allow one concurrent deployment
 concurrency:
-  group: "luxembourg"
+  group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
 jobs:
