--- a/.github/workflows/belgium-flanders.yml
+++ b/.github/workflows/belgium-flanders.yml
@@ -22,7 +22,7 @@ on:
 
 # Allow one concurrent deployment
 concurrency:
-  group: "belgium-flanders"
+  group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
 jobs:
