--- a/.github/workflows/netherlands.yml
+++ b/.github/workflows/netherlands.yml
@@ -21,7 +21,7 @@ on:
 
 # Allow one concurrent deployment
 concurrency:
-  group: "netherlands"
+  group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
 jobs:
