--- a/.github/workflows/belgium-brussels.yml
+++ b/.github/workflows/belgium-brussels.yml
@@ -24,12 +24,14 @@ on:
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
-  
+
 jobs:
 
   diff-brussels:
     name: Generate difference for Brussels, Belgium
     runs-on: ubuntu-latest
+    env:
+      MAPROULETTE_CHALLENGE_ID: 14675
     steps:
       - uses: actions/checkout@v3
         with:
@@ -77,7 +79,7 @@ jobs:
       - name: Generate MapRoulette buffers
         uses: ./.github/actions/maproulette-buffers
         with:
-          challenge-id: 14675
+          challenge-id: ${{ env.MAPROULETTE_CHALLENGE_ID }}
       - name: Upload MapRoulette false positive
         uses: actions/upload-artifact@v3
         with:
@@ -117,3 +119,8 @@ jobs:
         with:
           github_token: ${{ secrets.TOKEN }}
           branch: ${{ github.ref }}
+      - name: Rebuild MapRoulette challenge
+        run: |
+          curl -X "PUT" "https://maproulette.org/api/v2/challenge/${{ env.MAPROULETTE_CHALLENGE_ID }}/rebuild?removeUnmatched=true&skipSnapshot=false" \
+            -H "Accept: application/json" \
+            -H "apiKey: ${{ secrets.MAPROULETTE_API_KEY }}"
