--- a/.github/workflows/belgium-wallonia.yml
+++ b/.github/workflows/belgium-wallonia.yml
@@ -26,7 +26,7 @@ concurrency:
   cancel-in-progress: true
 
 env:
-  MAPROULETTE_CHALLENGE: 14681
+  MAPROULETTE_CHALLENGE_ID: 14681
 
 jobs:
 
@@ -81,7 +81,7 @@ jobs:
       - name: Generate MapRoulette buffers
         uses: ./.github/actions/maproulette-buffers
         with:
-          challenge-id: ${{ env.MAPROULETTE_CHALLENGE }}
+          challenge-id: ${{ env.MAPROULETTE_CHALLENGE_ID }}
       - name: Upload MapRoulette false positive
         uses: actions/upload-artifact@v3
         with:
@@ -158,7 +158,7 @@ jobs:
       - name: Generate MapRoulette buffers
         uses: ./.github/actions/maproulette-buffers
         with:
-          challenge-id: ${{ env.MAPROULETTE_CHALLENGE }}
+          challenge-id: ${{ env.MAPROULETTE_CHALLENGE_ID }}
       # - name: Upload MapRoulette false positive
       #   uses: actions/upload-artifact@v3
       #   with:
@@ -235,7 +235,7 @@ jobs:
       - name: Generate MapRoulette buffers
         uses: ./.github/actions/maproulette-buffers
         with:
-          challenge-id: ${{ env.MAPROULETTE_CHALLENGE }}
+          challenge-id: ${{ env.MAPROULETTE_CHALLENGE_ID }}
       # - name: Upload MapRoulette false positive
       #   uses: actions/upload-artifact@v3
       #   with:
@@ -312,7 +312,7 @@ jobs:
       - name: Generate MapRoulette buffers
         uses: ./.github/actions/maproulette-buffers
         with:
-          challenge-id: ${{ env.MAPROULETTE_CHALLENGE }}
+          challenge-id: ${{ env.MAPROULETTE_CHALLENGE_ID }}
       # - name: Upload MapRoulette false positive
       #   uses: actions/upload-artifact@v3
       #   with:
@@ -389,7 +389,7 @@ jobs:
       - name: Generate MapRoulette buffers
         uses: ./.github/actions/maproulette-buffers
         with:
-          challenge-id: ${{ env.MAPROULETTE_CHALLENGE }}
+          challenge-id: ${{ env.MAPROULETTE_CHALLENGE_ID }}
       # - name: Upload MapRoulette false positive
       #   uses: actions/upload-artifact@v3
       #   with:
@@ -520,3 +520,8 @@ jobs:
         with:
           github_token: ${{ secrets.TOKEN }}
           branch: ${{ github.ref }}
+      - name: Rebuild MapRoulette challenge
+        run: |
+          curl -X "PUT" "https://maproulette.org/api/v2/challenge/${{ env.MAPROULETTE_CHALLENGE_ID }}/rebuild?removeUnmatched=true&skipSnapshot=false" \
+            -H "Accept: application/json" \
+            -H "apiKey: ${{ secrets.MAPROULETTE_API_KEY }}"
