--- a/.github/workflows/belgium-brussels.yml
+++ b/.github/workflows/belgium-brussels.yml
@@ -112,8 +112,14 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/download-artifact@v3
         with:
+          name: Brussels-Difference
           path: data/belgium/brussels/difference
-      - run: |
+      - uses: actions/download-artifact@v3
+        with:
+          name: Brussels-Statistics
+          path: data/belgium/brussels/difference
+      - name: Commit & Push
+        run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
           git add data/belgium/brussels/difference/diff.geojson
@@ -126,7 +132,8 @@ jobs:
     needs: commit
     runs-on: ubuntu-latest
     steps:
-      - run: |
+      - name: Call MapRoulette API
+        run: |
           curl -X "PUT" "https://maproulette.org/api/v2/challenge/${{ env.MAPROULETTE_CHALLENGE_ID }}/rebuild?removeUnmatched=true&skipSnapshot=false" \
             -H "Accept: application/json" \
             -H "apiKey: ${{ secrets.MAPROULETTE_API_KEY }}"
