--- a/.github/workflows/belgium-brussels.yml
+++ b/.github/workflows/belgium-brussels.yml
@@ -120,8 +120,8 @@ jobs:
           path: data/belgium/brussels/difference
       - name: Commit & Push
         run: |
-          git config user.name github-actions
-          git config user.email github-actions@github.com
+          git config user.name github-actions[bot]
+          git config user.email 41898282+github-actions[bot]@users.noreply.github.com
           git add data/belgium/brussels/difference/diff.geojson
           git add data/belgium/brussels/difference/stats.json
           git commit -m "🗃 Update difference for Brussels, Belgium"
